--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -18,21 +18,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                app:radius="24"
+                app:radius="25"
                 android:src="@drawable/kal" />
         <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/white"
                 android:id="@+id/dashboard_circleView"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:src="@drawable/kal"
+                android:src="@drawable/concept_chat2"
         />
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/dashboard_username_tv"
                   android:fontFamily="@font/lato_bold"
-                  android:text="Vic Huang"
-                  android:textColor="@android:color/white"
+                  android:text="Username"
+                  android:textColor="@color/white"
                   android:textSize="20sp"
                   android:layout_gravity="center|bottom"
                   android:layout_marginBottom="30dp"
