--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -3,10 +3,14 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+                                             android:background="@drawable/theme_bg_01"
              tools:context=".app_central.VoteFragment">
 
 
     <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="148dp"
             android:layout_height="137dp"
             android:layout_marginTop="24dp"
@@ -16,9 +20,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/imageView7"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="16dp" android:id="@+id/vote_fragment_option_d_tv"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="148dp"
             android:layout_height="137dp"
             app:layout_constraintStart_toStartOf="@+id/cardView6"
@@ -27,20 +46,57 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/imageView6" android:layout_marginEnd="36dp" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.937"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/vote_fragment_option_c_tv" android:layout_marginBottom="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="148dp"
             android:layout_height="137dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="88dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView5" android:id="@+id/cardView7">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    android:id="@+id/imageView5" android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
+                    android:id="@+id/vote_fragment_option_b_tv" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="38dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="52dp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+            app:cardBackgroundColor="@color/darkBg"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="395dp"
             android:layout_height="99dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -50,33 +106,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="85dp"
                     android:layout_height="85dp" tools:src="@tools:sample/avatars"
-                    android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/vote_frament_subject_owner_imageview" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                     app:layout_constraintVertical_bias="0.0"/>
             <TextView
                     android:layout_width="0dp"
-                    android:layout_height="35dp"
+                    android:layout_height="78dp"
                     android:id="@+id/vote_fragment_subject_tv"
+                    android:textColor="@color/white"
                     android:text="Vote page is here"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toEndOf="@+id/imageView"/>
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview" android:textSize="24sp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <Button
-            android:text="Button"
-            android:layout_width="715dp"
-            android:layout_height="52dp"
-            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/vote_fragment_vote_btn"
+            android:text="Vote"
+            android:layout_width="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="80dp"
+            android:background="@color/myblue"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/lato_bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
     />
     <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="234dp"
             android:layout_height="74dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -86,18 +153,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/vote_fragment_timer_tv" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.509"
+                    android:textSize="30sp" android:textAlignment="center"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
             android:layout_width="148dp"
             android:layout_height="137dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-            android:layout_marginTop="88dp" app:layout_constraintTop_toBottomOf="@+id/cardView5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView5"
             android:id="@+id/cardView6">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/imageView3" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="4dp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:id="@+id/vote_fragment_option_a_tv"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
