--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-                                             android:background="@drawable/theme_bg_01"
+             android:background="@drawable/theme_bg_01"
              tools:context=".app_central.VoteFragment">
 
 
@@ -19,15 +21,31 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:translationZ="100dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:materialIcon="check_circle"
+                    app:materialIconColor="#B49759"
+                    app:materialIconSize="48dp"
+                    android:scaleType="center"
+                    android:id="@+id/add_photo_icon_d"
+
+
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView7"/>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="72dp"
-                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_d"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/imageView7"/>
+                    android:id="@+id/imageView7" app:layout_constraintHorizontal_bias="0.105"/>
             <TextView
-                    android:text="TextView"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="D"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -45,19 +63,36 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:translationZ="100dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:materialIcon="check_circle"
+                    app:materialIconColor="#B49759"
+                    app:materialIconSize="48dp"
+                    android:scaleType="center"
+                    android:id="@+id/add_photo_icon_c"
+
+
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView6"/>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="72dp"
-                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_c"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/imageView6" android:layout_marginEnd="36dp" android:layout_marginTop="16dp"
+                    android:id="@+id/imageView6" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.937"/>
+                    app:layout_constraintHorizontal_bias="0.092"/>
             <TextView
-                    android:text="TextView"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="C"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/vote_fragment_option_c_tv" android:layout_marginBottom="16dp"
+                    android:id="@+id/vote_fragment_option_c_tv"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
@@ -75,25 +110,41 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:translationZ="100dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:materialIcon="check_circle"
+                    app:materialIconColor="#B49759"
+                    app:materialIconSize="48dp"
+                    android:scaleType="center"
+                    android:id="@+id/add_photo_icon_b"
+
+
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView5"/>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="72dp"
-                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_b"
                     android:id="@+id/imageView5" android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.092"/>
             <TextView
-                    android:text="TextView"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="B"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                     android:id="@+id/vote_fragment_option_b_tv" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="38dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="52dp"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+            />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
-            app:cardBackgroundColor="@color/darkBg"
+            app:cardBackgroundColor="@color/orange_600"
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
@@ -114,16 +165,18 @@
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                     app:layout_constraintVertical_bias="0.0"/>
             <TextView
+                    android:fontFamily="@font/lato_bold"
                     android:layout_width="0dp"
                     android:layout_height="78dp"
                     android:id="@+id/vote_fragment_subject_tv"
                     android:textColor="@color/white"
-                    android:text="Vote page is here"
+                    android:text="subject"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview" android:textSize="24sp"/>
+                    app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
+                    android:textSize="24sp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <Button
@@ -144,8 +197,8 @@
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
-            android:layout_width="234dp"
-            android:layout_height="74dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cardView4"
             android:id="@+id/cardView5">
@@ -154,13 +207,15 @@
                 android:layout_height="match_parent">
 
             <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
+                    android:text="3:00"
+                    android:fontFamily="@font/lato_bold"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:id="@+id/vote_fragment_timer_tv" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.509"
                     android:textSize="30sp" android:textAlignment="center"/>
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
@@ -177,16 +232,30 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:translationZ="100dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:materialIcon="check_circle"
+                    app:materialIconColor="#B49759"
+                    app:materialIconSize="48dp"
+                    android:scaleType="center"
+                    android:id="@+id/add_photo_icon_a"
+
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView3"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="72dp"
-                    android:layout_height="72dp" tools:src="@tools:sample/avatars"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_a"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:id="@+id/imageView3" app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="4dp"/>
+                    android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.092"/>
             <TextView
-                    android:text="TextView"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="A"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
