--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_blue_300">#4FC3F7</color>
     <color name="myblue">#002D70</color>
     <color name="mygreen">#00B368</color>
+    <color name="orange_600">#FB8C00</color>
 </resources>
