--- a/app/src/main/res/layout/activity_app_central.xml
+++ b/app/src/main/res/layout/activity_app_central.xml
@@ -13,7 +13,7 @@
             android:id="@+id/bottom_navigation_bar"
             app:menu="@menu/bottom_nav_menu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:background="@color/myblue"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
