--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -9,6 +9,21 @@
              tools:context=".app_central.VoteFragment">
 
 
+    <TextView
+            android:background="@color/white"
+            android:translationZ="10dp"
+            android:text="@string/make_decision"
+            android:textColor="@color/golden"
+            android:fontFamily="@font/lato_bold"
+            android:textSize="12sp"
+            android:layout_width="160dp"
+            android:layout_height="22dp"
+            android:id="@+id/textView11"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="112dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.893"
+            android:textAlignment="center"/>
     <android.support.v7.widget.CardView
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
@@ -16,12 +31,15 @@
             android:layout_width="148dp"
             android:layout_height="137dp"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView7" app:layout_constraintEnd_toEndOf="@+id/cardView7"
+            app:layout_constraintTop_toBottomOf="@+id/vote_b_cardview"
+            app:layout_constraintEnd_toEndOf="@+id/vote_b_cardview"
+            android:id="@+id/vote_d_cardview"
     >
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:visibility="invisible"
                     android:translationZ="100dp"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -37,6 +55,8 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/golden"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:src="@drawable/option_d"
@@ -57,13 +77,16 @@
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
             android:layout_width="148dp"
+            android:id="@+id/vote_c_cardview"
             android:layout_height="137dp"
-            app:layout_constraintStart_toStartOf="@+id/cardView6"
-            app:layout_constraintTop_toBottomOf="@+id/cardView6" android:layout_marginTop="24dp">
+            app:layout_constraintStart_toStartOf="@+id/vote_a_cardview"
+            app:layout_constraintTop_toBottomOf="@+id/vote_a_cardview"
+            android:layout_marginTop="24dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:visibility="invisible"
                     android:translationZ="100dp"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -79,6 +102,8 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/golden"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:src="@drawable/option_c"
@@ -106,11 +131,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp"
             android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView5" android:id="@+id/cardView7">
+            app:layout_constraintTop_toBottomOf="@+id/cardView5"
+            android:id="@+id/vote_b_cardview">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:visibility="invisible"
                     android:translationZ="100dp"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -126,6 +153,8 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/golden"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:src="@drawable/option_b"
@@ -144,12 +173,13 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
-            app:cardBackgroundColor="@color/orange_600"
-            app:cardElevation="10dp"
+            app:cardBackgroundColor="@color/myblue"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="2dp"
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
             android:layout_width="395dp"
-            android:layout_height="99dp"
+            android:layout_height="101dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" android:id="@+id/cardView4">
@@ -158,8 +188,8 @@
                 android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="85dp"
-                    android:layout_height="85dp" tools:src="@tools:sample/avatars"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" tools:src="@tools:sample/avatars"
                     android:id="@+id/vote_frament_subject_owner_imageview" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
@@ -170,9 +200,8 @@
                     android:layout_height="78dp"
                     android:id="@+id/vote_fragment_subject_tv"
                     android:textColor="@color/white"
-                    android:text="subject"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
@@ -185,29 +214,29 @@
             android:layout_width="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="80dp"
-            android:background="@color/myblue"
+            android:background="@color/golden"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             android:fontFamily="@font/lato_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-    />
+            android:layout_marginBottom="60dp" app:layout_constraintHorizontal_bias="1.0"/>
     <android.support.v7.widget.CardView
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
             android:layout_width="150dp"
-            android:layout_height="100dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cardView4"
-            android:id="@+id/cardView5">
+            android:layout_height="60dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/cardView4"
+            android:id="@+id/cardView5" android:layout_marginEnd="228dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <TextView
-                    android:text="3:00"
                     android:fontFamily="@font/lato_bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
@@ -228,11 +257,12 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView5"
-            android:id="@+id/cardView6">
+            android:id="@+id/vote_a_cardview">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:visibility="invisible"
                     android:translationZ="100dp"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -246,6 +276,8 @@
                     app:layout_constraintStart_toEndOf="@+id/imageView3"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/golden"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:src="@drawable/option_a"
