--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,14 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".app_central.ResultFragment">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+>
 
-    <!-- TODO: Update blank fragment layout -->
+    <View
+            android:layout_width="wrap_content"
+            android:layout_height="425dp"
+            android:background="@color/darkBg"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view2"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/pin_timter_timer_tv"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+    <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
+
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toEndOf="@+id/cardView3" android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toTopOf="@+id/cardView3" app:layout_constraintBottom_toBottomOf="@+id/cardView3">
+        <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/golden"
+                    android:textSize="52sp"
+
+                    android:gravity="center"
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/result_result_d_tv"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
+
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toEndOf="@+id/cardView2"
+            android:id="@+id/cardView3"
+            app:layout_constraintTop_toTopOf="@+id/cardView2" app:layout_constraintBottom_toBottomOf="@+id/cardView2"
+            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.0">
+        <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/golden"
+                    android:textSize="52sp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/result_result_c_tv"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
+
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            android:id="@+id/cardView2" app:layout_constraintTop_toTopOf="@+id/cardView"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView" android:layout_marginStart="16dp"
+            app:layout_constraintVertical_bias="0.0">
+        <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/golden"
+                    android:textSize="52sp"
+
+                    android:gravity="center"
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/result_result_b_tv"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:elevation="8dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+            android:layout_marginTop="184dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView">
+        <LinearLayout
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+
+                    android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/golden"
+                    android:textSize="52sp"
+
+
+                    android:gravity="center"
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/result_result_a_tv"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="You can see result here"/>
+            android:text="Result:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/result_result_tv"
+            android:layout_marginTop="120dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
 
-</FrameLayout>
+
+
+
+</android.support.constraint.ConstraintLayout>
