--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -2,25 +2,27 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
 
+
     <View
             android:layout_width="wrap_content"
-            android:layout_height="425dp"
+            android:layout_height="400dp"
             android:background="@color/darkBg"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view2"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/pin_timter_timer_tv"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/pin_timter_timer_tv"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
+    />
     <android.support.v7.widget.CardView
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
 
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/cardView3" android:layout_marginStart="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
             app:layout_constraintTop_toTopOf="@+id/cardView3" app:layout_constraintBottom_toBottomOf="@+id/cardView3">
@@ -29,6 +31,21 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_d"
+                    android:id="@+id/result_imageview4"
+                    android:layout_weight="1"
+                    app:layout_constraintStart_toEndOf="@+id/result_imageview3"
+                    app:layout_constraintTop_toTopOf="@+id/result_imageview3"
+                    app:layout_constraintBottom_toBottomOf="@+id/result_imageview3" app:layout_constraintVertical_bias="0.0"/>
+            <View
+                    android:layout_width="60dp"
+                    android:layout_height="2.5dp"
+                    android:background="@color/golden"
+                    android:layout_marginTop="10dp"
+            />
             <TextView
 
                     android:fontFamily="@font/lato_bold"
@@ -48,7 +65,7 @@
             android:elevation="8dp"
 
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             android:id="@+id/cardView3"
             app:layout_constraintTop_toTopOf="@+id/cardView2" app:layout_constraintBottom_toBottomOf="@+id/cardView2"
@@ -58,6 +75,22 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_c"
+                    android:id="@+id/result_imageview3"
+                    android:layout_weight="1"
+                    app:layout_constraintStart_toEndOf="@+id/result_imageview2"
+                    app:layout_constraintTop_toTopOf="@+id/result_imageview2"
+                    app:layout_constraintBottom_toBottomOf="@+id/result_imageview2"
+                    app:layout_constraintVertical_bias="0.0"/>
+            <View
+                    android:layout_width="60dp"
+                    android:layout_height="2.5dp"
+                    android:background="@color/golden"
+                    android:layout_marginTop="10dp"
+            />
             <TextView
 
                     android:fontFamily="@font/lato_bold"
@@ -76,7 +109,7 @@
             android:elevation="8dp"
 
             android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/cardView"
             android:id="@+id/cardView2" app:layout_constraintTop_toTopOf="@+id/cardView"
             app:layout_constraintBottom_toBottomOf="@+id/cardView" android:layout_marginStart="16dp"
@@ -86,6 +119,22 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_b"
+                    android:id="@+id/result_imageview2"
+                    android:layout_weight="1"
+                    app:layout_constraintStart_toEndOf="@+id/result_imageview1"
+                    app:layout_constraintTop_toTopOf="@+id/result_imageview1"
+                    app:layout_constraintBottom_toBottomOf="@+id/result_imageview1"
+                    app:layout_constraintVertical_bias="0.0"/>
+            <View
+                    android:layout_width="60dp"
+                    android:layout_height="2.5dp"
+                    android:background="@color/golden"
+                    android:layout_marginTop="10dp"
+            />
             <TextView
 
                     android:fontFamily="@font/lato_bold"
@@ -104,21 +153,33 @@
             app:cardCornerRadius="20dp"
             android:elevation="8dp"
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
-            android:layout_marginTop="184dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView">
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView">
         <LinearLayout
                 android:gravity="center"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:src="@drawable/option_a"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_weight="1"
+                    android:id="@+id/result_imageview1"
+                    app:layout_constraintTop_toTopOf="@+id/view2"/>
+            <View
+                android:layout_width="60dp"
+                android:layout_height="2.5dp"
+                android:background="@color/golden"
+                android:layout_marginTop="10dp"
+            />
             <TextView
-
+                    android:layout_weight="1"
                     android:fontFamily="@font/lato_bold"
                     android:textColor="@color/golden"
                     android:textSize="52sp"
-
-
                     android:gravity="center"
                     android:text="0"
                     android:layout_width="match_parent"
@@ -127,17 +188,33 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <TextView
-            android:text="Result:"
+            android:text="RESULT:"
+            android:fontFamily="@font/lato_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/result_result_tv"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/white"/>
+
+    <com.github.mikephil.charting.charts.PieChart
+            android:layout_width="360dp"
+            android:layout_height="360dp"
+            android:id="@+id/result_piechart"
+
+            android:layout_marginBottom="60dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.392"
+    >
+
+    </com.github.mikephil.charting.charts.PieChart>
+
+
 
 
 
