--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -5,15 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_marginTop="16dp"
                                              android:layout_height="wrap_content">
-    <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_color="@color/myblue"
-            app:civ_border_width="1dp"
-            android:src="@drawable/concept_chat2"
-            android:layout_width="60dp"
-            android:layout_height="60dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.0" android:id="@+id/row_circleImageView"/>
+
 
     <android.support.v7.widget.CardView
             app:cardUseCompatPadding="true"
@@ -23,9 +15,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:id="@+id/row_from_message_cardview" app:layout_constraintStart_toEndOf="@+id/row_circleImageView"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/row_circleImageView">
+
+            android:id="@+id/row_to_message_cardview"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/row_to_username_time_tv">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -37,9 +31,9 @@
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:maxWidth="240dp"
-                    android:text="what are the teacher talking aboub?? Does any one realize the course? "
+                    android:text="I don't know either!!! "
                     android:padding="10dp"
-                    android:id="@+id/row_from_message_tv"
+                    android:id="@+id/row_to_message_tv"
                     android:textColor="@color/myblue"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
@@ -47,14 +41,16 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <TextView
-            android:text="Jerry Chen, 9:02"
+            android:text="Vic Huang, 9:02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/row__from_username_time_tv" app:layout_constraintStart_toEndOf="@+id/row_circleImageView"
-            android:layout_marginStart="16dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/row_from_message_cardview" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.003"
-            app:layout_constraintVertical_bias="1.0"/>
+            android:id="@+id/row_to_username_time_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/row_to_message_cardview"
+            app:layout_constraintVertical_bias="0.25"/>
 
 
 </android.support.constraint.ConstraintLayout>
