--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -185,7 +185,7 @@
             android:layout_height="101dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp" android:id="@+id/cardView4">
+            android:layout_marginStart="8dp" android:id="@+id/row_to_message_cardview">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -232,7 +232,7 @@
             android:layout_width="150dp"
             android:layout_height="60dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/cardView4"
+            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/row_to_message_cardview"
             android:id="@+id/cardView5" android:layout_marginEnd="228dp" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0">
         <android.support.constraint.ConstraintLayout
