--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.CardView
             app:cardUseCompatPadding="true"
             app:cardElevation="2dp"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="10dp"
             android:elevation="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,6 +27,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/row_circleImageView">
         <android.support.constraint.ConstraintLayout
+                android:background="@drawable/gradient_background"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
@@ -40,7 +41,7 @@
                     android:text="what are the teacher talking aboub?? Does any one realize the course? "
                     android:padding="10dp"
                     android:id="@+id/row_from_message_tv"
-                    android:textColor="@color/myblue"
+                    android:textColor="@color/white"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
                     android:textSize="16sp"/>
