--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -20,12 +20,14 @@
                 android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                    app:civ_border_width="1px"
+                    app:civ_border_color="@color/white"
                     android:layout_width="60dp"
                     android:layout_height="60dp" tools:src="@tools:sample/avatars"
                     android:id="@+id/chat_owner_imageview" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintVertical_bias="0.0"/>
+                    app:layout_constraintVertical_bias="0.2" app:layout_constraintEnd_toStartOf="@+id/chat_subject_tv"
+                    android:layout_marginEnd="32dp"/>
             <TextView
                     android:fontFamily="@font/lato_bold"
                     android:layout_width="0dp"
@@ -38,6 +40,23 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
                     android:textSize="24sp"/>
+            <TextView
+                    android:text="Entry Pincode:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/chat_entry_pincode_tv"
+                    android:layout_marginStart="32dp" android:textSize="18sp" android:fontFamily="@font/lato_bold"
+                    android:textColor="@color/colorAccent" android:layout_marginBottom="12dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
+            <TextView
+                    android:text="Chat ROOM"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp" android:id="@+id/textView6"
+                    android:textSize="18sp" android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/lato_bold" android:layout_marginStart="32dp"
+                    app:layout_constraintStart_toStartOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
@@ -73,7 +92,7 @@
             android:textColor="@color/white"
             android:id="@+id/chat_send_btn"
             android:fontFamily="@font/lato_bold"
-            android:textSize="20dp"
+            android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/view3" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"/>
     <android.support.v7.widget.RecyclerView
