--- a/app/src/main/res/layout/activity_submit_vote.xml
+++ b/app/src/main/res/layout/activity_submit_vote.xml
@@ -294,13 +294,12 @@
     <TextView
             android:text="@string/submit_subject"
             android:fontFamily="@font/lato_bold"
-            android:textColor="@color/golden"
+            android:textColor="@color/myblue"
             android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/submit_subject_tv" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="32dp"/>
+            android:id="@+id/submit_subject_tv"
+            tools:layout_editor_absoluteY="24dp" tools:layout_editor_absoluteX="32dp"/>
     <LinearLayout android:layout_width="match_parent" android:layout_height="64dp"
 
                   android:id="@+id/text_linearlayout"
@@ -312,13 +311,13 @@
             <TextView
                     android:text="TextView"
                     android:layout_marginLeft="20dp"
-                    android:textColor="@color/golden"
+                    android:textColor="@color/myblue"
                     android:layout_width="match_parent"
-                    android:fontFamily="@font/sree_krushnadevaraya"
+                    android:fontFamily="@font/lato_bold"
                     android:layout_height="wrap_content"
                     android:id="@+id/submit_subject_content_tv"
-                    android:textSize="20sp"
-                 />
+                    android:textSize="24sp"
+            />
         </ScrollView>
 
 
