--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -233,8 +233,8 @@
             android:layout_height="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/row_to_message_cardview"
-            android:id="@+id/cardView5" android:layout_marginEnd="228dp" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0">
+            android:id="@+id/cardView5" android:layout_marginEnd="228dp"
+            app:layout_constraintStart_toStartOf="@+id/vote_a_cardview">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
