--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -20,7 +20,7 @@
                 android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    app:civ_border_width="1px"
+                    app:civ_border_width="2dp"
                     app:civ_border_color="@color/white"
                     android:layout_width="60dp"
                     android:layout_height="60dp" tools:src="@tools:sample/avatars"
@@ -70,6 +70,7 @@
     <EditText
 
             android:layout_width="292dp"
+            android:translationZ="100dp"
             android:layout_height="47dp"
             android:inputType="textPersonName"
             android:paddingLeft="20dp"
@@ -78,6 +79,7 @@
             android:textCursorDrawable="@drawable/bg_input_cursor_2"
             android:drawableLeft="@drawable/ic_insert_emoticon_black_24dp"
             android:fontFamily="@font/lato_bold"
+            android:nextFocusDown="@+id/chat_send_btn"
             android:ems="10"
             android:id="@+id/chat_message_et" android:hint="@string/message_hint"
             android:textAlignment="center"
