--- a/app/src/main/res/layout/activity_history_main.xml
+++ b/app/src/main/res/layout/activity_history_main.xml
@@ -5,14 +5,43 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".dashboard.HistoryMainActivity">
 
-    <TextView
-            android:text="Will display history here"
+        tools:context=".user_login_and_register.LoginActivity">
+    <View
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/textView5" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textSize="30sp"/>
+            android:layout_height="112dp"
+            android:id="@+id/view4"
+            android:background="@color/darkBg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+    </View>
+    <TextView
+            android:text="@string/history_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="36sp"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/sree_krushnadevaraya"
+            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
+
+
+    <android.support.v7.widget.RecyclerView
+
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:id="@+id/history_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view4"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
 </android.support.constraint.ConstraintLayout>
